# zkm-prover

./: .gitignore  Cargo.toml  Deployment.md  Dockerfile  README.md  docker-compose.yml  initdb.d  rust-toolchain.toml
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: file.rs  lib.rs  tls.rs
docs/: grpc-api.md
executor/: Cargo.toml  build.rs
executor/src/: executor.rs  lib.rs  split_context.rs  traces_util.rs
proof-service/: Cargo.toml  build.rs
proof-service/.sqlx/: query-6ee88920e5f030ac336bc779cf0a1a88f815bb80a06b2dc0fcf6cc30e402cb42.json  query-aebb2877a4e58d7676b62d731f412812673cf078c8ee6c984c6256fdc2b20b8a.json  query-c37fb8397cdd44669d09c6cea776989605759b8d9a8caf74889994422dd76ff7.json  query-e74ded30df05a3e6c9fb23bb77f3bebdb3431ab64d3c4e8a5dbfc09d2d72f021.json
proof-service/config/: README.md  config.toml  config_docker_compose.toml  gen_config.sh  prover.toml.template  prover_tls.toml.template  stage.toml  stage.toml.template  stage_tls.toml.template
proof-service/examples/: README.md  stage.rs
proof-service/migrations/: 20240407083049_stage_task.sql
proof-service/src/: config.rs  database.rs  lib.rs  main.rs  metrics.rs  proto.rs  prover_client.rs  prover_node.rs  prover_service.rs  stage_service.rs  stage_worker.rs
proof-service/src/executor/: executor.rs  mod.rs  split_context.rs
proof-service/src/stage/: mod.rs  stage.rs  stage_service.rs  stage_worker.rs
proof-service/src/stage/contexts/: generate_context.rs
proof-service/src/stage/tasks/: agg_task.rs  final_task.rs  generate_task.rs  mod.rs  prove_task.rs  snark_task.rs  split_task.rs
proto/src/proto/include/v1/: includes.proto  program.proto
proto/src/proto/prover/v1/: prover.proto
proto/src/proto/stage/v1/: stage.proto
prover/: Cargo.toml
prover/src/: lib.rs  pipeline.rs
prover/src/contexts/: agg_all_context.rs  agg_context.rs  final_context.rs  mod.rs  prove_context.rs  snark_context.rs  split_context.rs
prover/src/executor/: executor.rs  mod.rs
prover/src/provers/: agg_all_prover.rs  agg_prover.rs  executor.rs  file_utils.rs  final_prover.rs  mod.rs  prove_prover.rs  root_prover.rs  snark_prover.rs  split_prover.rs
prover_v2/: Cargo.toml
prover_v2/src/: agg_prover.rs  contexts.rs  executor.rs  lib.rs  pipeline.rs  root_prover.rs  snark_prover.rs
prover_v2/src/contexts/: agg_context.rs  executor_context.rs  mod.rs  prove_context.rs  snark_context.rs
prover_v2/src/utils/: concurrency.rs  distributed_concurrency.rs  mod.rs
service/: Cargo.toml  build.rs  config.toml  db.sql
service/.sqlx/: query-15acc9e35a09d7d61d74d2aad4b19962598d5c2d9568aef6d559170ffff8ef74.json  query-17d5a4d511ecd38bd04426da89778b7c750eebe2149c355059e1ccd8e3cb2fd1.json  query-26a6971a8e8ca9fe4c4cb4b73c105c7a25822f8308eabfd6ad995b7c841b2edc.json  query-4064b85f90e27cf6a7386e72f250c6c7bcdc6db45474c93365cfdb51c6259e2b.json  query-4f109e0faa8b4395efdd1580ef21377eecfdaa03d0db142bacb2e6a4507c857d.json  query-6ee88920e5f030ac336bc779cf0a1a88f815bb80a06b2dc0fcf6cc30e402cb42.json  query-72c9449fa38f73e61b9811722fb524d87c79b9e2c1f67477670edf4bea9147ce.json  query-795defc4f28ef250f26691c308acb1f289fd6e6b80c9915d2da1e35c7f8ac0c8.json  query-8b7eec3975fa959571e127dc3f41dfc0007758938f92a26601b8c7331a95817e.json  query-91c09a7ed9ef5194edd4072ca0d2634102c948a7ef56ad769ca43602a9d4c1ff.json  query-a5c5d20103609c17851f0c5523f933a0c5fb036f16b00b34cfd76c690f4e85e0.json  query-c1ae79c982d01d74d05986ca6606252557719a10cecb174ede77fbc869359c57.json  query-f122855dd9a5b3cd6f09651c7ca3a802d1f195e5443075dae91c63b060510a85.json
service/config/: config.toml  config_docker_compose.toml  gen_config.sh  prover1.toml  prover1_tls.toml  prover2.toml  prover2_tls.toml  prover_tls_template.toml  stage.toml  stage_template.toml  stage_tls.toml  stage_tls.toml.template  stage_tls_template.toml
service/examples/: README.md  Verifier.abi  stage.rs  verify_proof.rs
service/migrations/: 20240407083200_prove_task.sql  20240523062108_user.sql  20240618072456_update_stage_task.sql  20240910062459_update_stage_task.sql  20241219020044_update_prove_task_index.sql
service/proto/src/proto/prover/v1/: prover.proto
service/proto/src/proto/stage/v1/: stage.proto
service/src/: config.rs  database.rs  main.rs  metrics.rs  prover_client.rs  prover_node.rs  prover_service.rs  stage_service.rs  stage_worker.rs  storage.rs
stage/: Cargo.toml  build.rs
stage/src/: lib.rs  stage.rs
stage/src/contexts/: generate_context.rs  mod.rs
stage/src/tasks/: agg_task.rs  final_task.rs  mod.rs  prove_task.rs  split_task.rs
tools/certs/: .csr  .key  .pem  ca.key  ca.pem  ca.srl  certgen.sh  client.key  client.pem  openssl.cnf  prover1.key  prover1.pem  prover2.key  prover2.pem  stage.key  stage.pem
zkm-prover/: Cargo.toml
zkm-prover/src/: pipeline.rs
zkm-prover/src/contexts/: prove_context.rs
zkm-prover/src/provers/: mod.rs
zkm2-prover/: Cargo.toml
