[workspace]
members = [
    "prover",
    "common",
    "proof-service",
    "prover_v2",
]

resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
## TODO: remove this patch once published
#[patch."https://github.com/zkMIPS/zkm.git"]
#zkm-prover = { path = "../zkm/prover" }
#zkm-emulator = { path = "../zkm/emulator" }
#zkm-recursion = { path = "../zkm/recursion" }
#>>>>>>> aa977a0 (support zkm2)
