[workspace]
members = [
    "prover",
    "common",
    "proof-service",
    "prover_v2",
]

resolver = "2"

[patch."https://github.com/zkMIPS/zkm.git"]
zkm-prover = { path = "../zkm/prover" }
zkm-emulator = { path = "../zkm/emulator" }
zkm-recursion = { path = "../zkm/recursion" }

[patch."https://github.com/zkMIPS/plonky2.git"]
plonky2 = { path = "../plonky2-origin/plonky2" }
starky = { path = "../plonky2-origin/starky" }
plonky2_util = { path = "../plonky2-origin/util" }
plonky2_maybe_rayon = { path = "../plonky2-origin/maybe_rayon" }
