[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
zkm-emulator = { git = "https://github.com/zkMIPS/zkm.git", branch = "main" }

bincode = "1.3.3"
log = { version = "0.4.14", default-features = false }
num = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
elf = { version = "0.7", default-features = false }
common = { path= "../common" }
tonic = "0.8.1"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.0"
