[package]
name = "proof-service"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prover = { path = "../prover", optional = true }
prover_v2 = { path = "../prover_v2", optional = true }

common = { path = "../common" }

bincode = "1.3.3"

tonic = "0.8.3"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }

once_cell = "1.8"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.8.1", features = ["mysql", "time", "runtime-tokio"] }
serde = "1.0.92"
serde_json = "1.0"
serde_derive = "1.0.92"
log = "0.4.0"
env_logger = "0.10"
toml = "0.5.1"
lazy_static = "1.4"
clap = "4.5.2"
anyhow = "1.0.75"
hex = "0.4.3"
ethers = "2.0.14"
prometheus = "0.13"
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
backtrace = "0.3.74"

# file server
warp = "0.3"

[build-dependencies]
tonic-build = "0.8.0"


[features]
default = ["prover"]
prover = ["dep:prover"]
prover_v2 = ["dep:prover_v2"]