[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/zkMIPS/plonky2.git", branch = "zkm_dev" }

zkm-prover = { git = "https://github.com/zkMIPS/zkm.git", branch = "main" }
zkm-emulator = { git = "https://github.com/zkMIPS/zkm.git", branch = "main" }
zkm-recursion = { git = "https://github.com/zkMIPS/zkm.git", branch = "main" }

#zkm-prover =    { path = "../../zkm/prover" }
#zkm-emulator =  { path = "../../zkm/emulator" }
#zkm-recursion = { path = "../../zkm/recursion" }

bincode = "1.3.3"
log = { version = "0.4.14", default-features = false }
anyhow = "1.0.75"
num = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.13.0"
elf = { version = "0.7", default-features = false }

common = { path = "../common" }

[features]
gpu = []
