[package]
name = "prover_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
serde_json = "1.0.140"
tokio = "1.44.0"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive", "rc"] }
deadpool-redis = { version = "0.20.0", features = ["tokio-comp"] }
redis = { version = "0.29.1", features = ["aio", "tokio-comp", "connection-manager"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
tracing-forest = { version = "0.1.6", default-features = false }
bincode = "1.3.3"
anyhow = "1.0.97"
once_cell = "1.13.0"

zkm-core-machine = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-core-executor = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-stark = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-prover = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-recursion-compiler = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-recursion-core = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-recursion-circuit = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }

p3-field = { git = "https://github.com/zkMIPS/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/zkMIPS/Plonky3" }
p3-koala-bear = { git = "https://github.com/zkMIPS/Plonky3" }

common = { path = "../common" }
tempfile = "3.18.0"

[features]
debug = []