[package]
name = "prover_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tracing = "0.1.37"
bincode = "1.3.3"
anyhow = "1.0.97"
once_cell = "1.13.0"

zkm-core-machine = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-core-executor = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-stark = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-prover = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-recursion-compiler = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-recursion-core = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-recursion-circuit = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS", branch = "feat/network" }

p3-maybe-rayon = { git = "https://github.com/zkMIPS/Plonky3" }

common = { path = "../common" }
tempfile = "3.18.0"

[features]
debug = []