[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prover = { path = "../prover" }
stage = {path = "../stage"}
executor = {path = "../executor"}
common = {path = "../common"}
tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
once_cell = "1.8"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = "1.0.92"
serde_derive = "1.0.92"
log = "0.4.0"
env_logger = "0.10"
toml = "0.5.1"
lazy_static = "1.4"
clap = "4.5.2"
anyhow = "1.0.75"
[build-dependencies]
tonic-build = "0.8.0"