[package]
name = "stage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["serde"] }
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
common = {path = "../common"}
tonic = "0.8.1"
serde_derive = "1.0.218"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.0"
