[package]
name = "zkm-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/zkMIPS/plonky2.git", branch = "zkm_dev" }
plonky2x = { git = "https://github.com/zkMIPS/succinctx.git", package = "plonky2x",  branch = "zkm" }
plonky2x-derive = { git = "https://github.com/zkMIPS/succinctx.git", package = "plonky2x-derive",  branch = "zkm" }
curta = { git ="https://github.com/zkMIPS/curta.git", branch = "zkm" }
zkm-prover = { git = "https://github.com/zkMIPS/zkm.git", branch = "main" }
zkm-emulator = { git = "https://github.com/zkMIPS/zkm.git", branch = "main" }

bincode = "1.3.3"
log = { version = "0.4.14", default-features = false }
anyhow = "1.0.75"
num = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.13.0"
lazy_static = "1.4.0"
elf = { version = "0.7", default-features = false }

common = {path = "../common"}
